--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,7 +17,8 @@
     "eslint-plugin-react": "^7.33.1",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
