--- a/backend/ohmycarset/src/main/resources/application.properties
+++ b/backend/ohmycarset/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=${APPLICATION_PORT}
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/ohmycarset
 spring.datasource.username=${DB_USERNAME}
