[BE] fix: build시 test 실행하지 않도록 변경
build시 test를 실행하려 하면 DB에 접근이 필요한데, 보안상 막혀 있으므로 임시적으로 test를 실행하지 않도록 수정

--- a/.github/workflows/ci_backend.yml
+++ b/.github/workflows/ci_backend.yml
@@ -29,7 +29,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: 빌드를 실행합니다.
-        run: ./gradlew build
+        run: ./gradlew build --exclude-task test
 
       - name: 빌드 결과물 이름을 app.jar로 바꿉니다.
         run: |
