--- a/.github/workflows/ci_frontend.yml
+++ b/.github/workflows/ci_frontend.yml
@@ -25,7 +25,8 @@ jobs:
                   node-version: 18
 
             - name: 환경변수를 설정합니다.
-              run: echo "VITE_API_URL=$VITE_API_URL" >> .env
+              run: |
+                  echo "VITE_API_URL=$VITE_API_URL" >> .env
                   echo "VITE_STATIC_API_URL=$VITE_STATIC_API_URL" >> .env
               env:
                   VITE_API_URL: ${{ secrets.VITE_API_URL }}
