--- a/backend/ohmycarset/src/main/resources/application.properties
+++ b/backend/ohmycarset/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/ohmycarset
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
+
+spring.cache.type=redis
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
