--- a/backend/ohmycarset/src/test/resources/application.properties
+++ b/backend/ohmycarset/src/test/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.password=
 
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
+
+spring.cache.type=redis
+spring.redis.host=${REDIS_HOST}
+spring.redis.port=${REDIS_PORT}
