feat: springdoc 추가

--- a/backend/ohmycarset/src/main/resources/application.properties
+++ b/backend/ohmycarset/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.password=${DB_PASSWORD}
 spring.cache.type=redis
 spring.redis.host=${REDIS_HOST}
 spring.redis.port=${REDIS_PORT}
+
+# swaggerdoc
+springdoc.swagger-ui.path=/docs
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.operations-sorter=alpha
