chore: 테스트용 hamcrest 의존성 추가

--- a/backend/ohmycarset/build.gradle
+++ b/backend/ohmycarset/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation group: 'com.h2database', name: 'h2', version: '2.2.220'
+	testImplementation 'org.hamcrest:hamcrest'
 }
 
 tasks.named('test') {
