--- a/.github/workflows/ci_frontend.yml
+++ b/.github/workflows/ci_frontend.yml
@@ -64,3 +64,9 @@ jobs:
                   . s3://ohmycarset.com \
                   --region ap-northeast-2 \
                   --delete
+                  
+            - name: Cloudfront 캐시 무효화
+              uses: chetan/invalidate-cloudfront-action@master
+              env:
+                  AWS_DISTRIBUTION: ${{ secrets.AWS_DISTRIBUTION_ID }}
+                  PATHS: '/*'
