[BE] fix : cloudfront 스크립트 수정

--- a/.github/workflows/ci_frontend.yml
+++ b/.github/workflows/ci_frontend.yml
@@ -68,5 +68,8 @@ jobs:
             - name: Cloudfront 캐시 무효화
               uses: chetan/invalidate-cloudfront-action@master
               env:
-                  AWS_DISTRIBUTION: ${{ secrets.AWS_DISTRIBUTION_ID }}
+                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  AWS_REGION: ap-northeast-2
+                  DISTRIBUTION: ${{ secrets.AWS_DISTRIBUTION_ID }}
                   PATHS: '/*'
