--- a/.github/workflows/ci_backend.yml
+++ b/.github/workflows/ci_backend.yml
@@ -11,6 +11,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services: # 같이 동작하는 서비스 컨테이너 목록
+      redis: # 빌드시 테스트 진행을 위해 redis 이용
+        image: redis
+        # redis가 정상 동작중일때 접근하도록 health check 설정
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          # localhost의 6379번으로 매핑
+          - 6379:6379
+
     defaults:
       run:
         working-directory: ./backend/ohmycarset
@@ -29,7 +42,10 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: 빌드를 실행합니다.
-        run: ./gradlew build --exclude-task test
+        env:
+          REDIS_HOST: localhost
+          REDIS_PORT: 6379
+        run: ./gradlew build
 
       - name: 빌드 결과물 이름을 app.jar로 바꿉니다.
         run: |
@@ -52,18 +68,6 @@ jobs:
         with:
           name: build-backend
 
-      - name: 현재 서버에서 동작중인 docker를 종료시킵니다.
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SERVER_KEY }}
-          port: ${{ secrets.SERVER_PORT }}
-          timeout: 1m
-          script: |
-            cd /home/ubuntu/spring
-            docker compose down
-
       - name: SCP로 빌드 파일을 전송합니다.
         uses: appleboy/scp-action@master
         with:
@@ -74,14 +78,13 @@ jobs:
           source: "app.jar"
           target: "/home/ubuntu/spring"
 
-      - name: 새로운 빌드 결과물로 docker 컨테이너를 동작시킵니다.
+      - name: 배포 스크립트를 작동시킵니다.
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_KEY }}
           port: ${{ secrets.SERVER_PORT }}
-          timeout: 1m
+          timeout: 5m
           script: |
-            cd /home/ubuntu/spring
-            docker compose up -d
+            sudo /home/ubuntu/spring/update.sh
